# glowingspoon

./: .gitignore  LICENSE  Pipfile  README.md  Readme.md  core.py  model.pth  pyproject.toml  setup.cfg
glowing_spoon/model/: ImageDataset.py  test.py
glowingspoon/: __main__.py  _main.py  ml.py  model.py
glowingspoon/model/: test.py  train.py
glowingspoon/utility/: utility.py
model/: ConvNet.py  train.py
tests/: test_glowing_spoon.py
utility/: utility.py
