[tool.poetry]
name = "glowingspoon"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Romain Mencattini <romain.mencattini@zaclys.net>"]
keywords =["machine learning", "numerical imaging", "neural network"]
packages = [
    {include = "glowingspoon"},
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.15"
matplotlib = "^3.0"
pillow = "^5.3"
argparse = "^1.4"
tqdm = "^4.28"
scikit-image = "^0.14.1"
torch = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.2"
ipdb = "^0.11.0"

[tool.poetry.scripts]
glowingspoon = 'glowingspoon._main:core'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
