[metadata]
name = glowingspoon
version = 0.2.0
author = Romain Mencattini
author-email = romain.mencattini@zaclys.net
home-page = https://github.com/mencattini
description = Use machine learning to remove blurred on binary images
long-description = file: README.md
license = MIT

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6.0
packages = find:
install_requires = 
    numpy == 1.15
    matplotlib == 3.0
    pillow == 5.3
    argparse == 1.4
    tqdm == 4.28
    scikit-image == 0.14.1
    torch == 1.0

[options.entry_points]
console_scripts =
    glowingspoon = glowingspoon._main:core

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar